rename to CrispyCrypto

--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="CryptoCrunch - Your Crypto Adventure">
-    <title>CryptoCrunch – Crypto game for iOS</title>
+    <meta name="description" content="CrispyCrypto - Your Crypto Adventure">
+    <title>CrispyCrypto – Crypto game for iOS</title>
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="CryptoCrunch - Your Crypto Adventure"/>
+    <meta property="og:title" content="CrispyCrypto - Your Crypto Adventure"/>
     <!-- <meta property="og:image" content="img/facebook-web-image.png"/> -->
-    <meta property="og:url" content="https://ilyagru.github.io/CryptoCrunch"/>
-    <meta property="og:site_name" content="CryptoCrunch"/>
-    <meta property="og:description" content="CryptoCrunch - Your Crypto Adventure"/>
-    <meta name="twitter:title" content="CryptoCrunch - Your Crypto Adventure"/>
-    <!-- <meta name="twitter:site" content="@CryptoCrunch"> -->
+    <meta property="og:url" content="https://ilyagru.github.io/CrispyCrypto"/>
+    <meta property="og:site_name" content="CrispyCrypto"/>
+    <meta property="og:description" content="CrispyCrypto - Your Crypto Adventure"/>
+    <meta name="twitter:title" content="CrispyCrypto - Your Crypto Adventure"/>
+    <!-- <meta name="twitter:site" content="@CrispyCrypto"> -->
     <!-- <meta name="twitter:image" content="img/apple-touch-icon-120.png"/> -->
-    <meta name="twitter:url" content="https://ilyagru.github.io/CryptoCrunch"/>
-    <meta name="twitter:description" content="CryptoCrunch - Your Crypto Adventure"/>
+    <meta name="twitter:url" content="https://ilyagru.github.io/CrispyCrypto"/>
+    <meta name="twitter:description" content="CrispyCrypto - Your Crypto Adventure"/>
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:app:name:iphone" content="CryptoCrunch - Your Crypto Adventure"/>
+    <meta name="twitter:app:name:iphone" content="CrispyCrypto - Your Crypto Adventure"/>
     <!-- <meta name="twitter:app:id:iphone" content=""/> -->
     <!-- <meta name="apple-itunes-app" content="app-id="> -->
     <!-- <link rel="apple-touch-icon" href="img/apple-touch-icon-76.png"> -->
