update for release

--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="CrispyCrypto - Your Crypto Adventure"/>
     <!-- <meta property="og:image" content="img/facebook-web-image.png"/> -->
-    <meta property="og:url" content="https://ilyagru.github.io/CrispyCrypto"/>
+    <meta property="og:url" content="https://ilyagru.github.io/crispycrypto"/>
     <meta property="og:site_name" content="CrispyCrypto"/>
     <meta property="og:description" content="CrispyCrypto - Your Crypto Adventure"/>
     <meta name="twitter:title" content="CrispyCrypto - Your Crypto Adventure"/>
     <!-- <meta name="twitter:site" content="@CrispyCrypto"> -->
-    <!-- <meta name="twitter:image" content="img/apple-touch-icon-120.png"/> -->
-    <meta name="twitter:url" content="https://ilyagru.github.io/CrispyCrypto"/>
+    <meta name="twitter:image" content="img/apple-touch-icon-120.png"/>
+    <meta name="twitter:url" content="https://ilyagru.github.io/crispycrypto"/>
     <meta name="twitter:description" content="CrispyCrypto - Your Crypto Adventure"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:app:name:iphone" content="CrispyCrypto - Your Crypto Adventure"/>
-    <!-- <meta name="twitter:app:id:iphone" content=""/> -->
-    <!-- <meta name="apple-itunes-app" content="app-id="> -->
-    <!-- <link rel="apple-touch-icon" href="img/apple-touch-icon-76.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="76x76" href="img/apple-touch-icon-76.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="120x120" href="img/apple-touch-icon-120.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="152x152" href="img/apple-touch-icon-152.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon-180.png"> -->
-    <!-- <link rel="icon" sizes="192x192" href="img/apple-touch-icon-192.png"> -->
+    <meta name="twitter:app:id:iphone" content="1412148566"/>
+    <meta name="apple-itunes-app" content="app-id=1412148566">
+    <link rel="apple-touch-icon" href="img/apple-touch-icon-76.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/apple-touch-icon-76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/apple-touch-icon-120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/apple-touch-icon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon-180.png">
+    <link rel="icon" sizes="192x192" href="img/apple-touch-icon-192.png">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="wrapper">
         <main>
             <div class="img-container">
-                <img class="img-screen" src="img/screen.gif" alt="iPhone game">
+                <img class="img-screen" src="img/iphone-screen.gif" alt="iPhone game">
                 <img class="img-frame" src="img/iPhone-frame@2x.png" alt="iPhone game">
             </div>
             <div>
-                <h1 class="main-title">Your Crypto Adventure<br/>...is coming soon!</h1>
-                <a class="main-link" href="#">
+                <h1 class="main-title">Your Crypto Adventure</h1>
+                <p class="main-description">You always wanted to mine some tokens without spending a fortune?<br/>Now it’s possible! Jump up and download CrispyCrypto to crunch some cryptos!</p>
+                <a class="main-link" href="https://itunes.apple.com/us/app/crispycrypto/id1412148566">
                     <img class="img-download" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="Download on the App Store">
                 </a>
-
                 <p>For all questions or support email here: <strong>ilya.gruzhevski[at]gmail.com</strong></p>
                 <p>Ilya Gruzhevski &copy; 2018 All rights reserved</p>
             </div>
