add important note

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 </a>
                 <p>For all questions or support email here: <strong>ilya.gruzhevski[at]gmail.com</strong></p>
                 <p>Ilya Gruzhevski &copy; 2018 All rights reserved</p>
+                <div class="main-note">
+                    <p>IMPORTANT NOTE</p>
+                    <small>The game does NOT involve any real-world mining, especially on your iPhone.<br/>We don’t want to warm up your iPhone and burn your hands!</small>
+                </div>
             </div>
         </main>
     </div>
