--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -33,7 +33,7 @@
     <div class="wrapper">
       <header>
         <div>
-          <a href="/">Home</a>
+          <a href="/crispycrypto">Home</a>
           <h1>Privacy Policy</h1>
           <p>
             <strong>In short:</strong> We value your privacy, so we don't collect and store any personal information. However, we may use third-party advertising companies to serve advertisements when you use the Game. These companies may use information about you or tracking technologies in order to provide advertisements about goods and services of interest to you.
