--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a class="main-link" href="https://itunes.apple.com/us/app/crispycrypto/id1412148566">
                     <img class="img-download" src="img/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="Download on the App Store">
                 </a>
-                <p><a href="/privacy-policy.html">Privacy Policy</a></p>
+                <p><a href="/crispycrypto/privacy-policy.html">Privacy Policy</a></p>
                 <p>For all questions or support please leave a review on <strong>the App Store</strong>.</p>
                 <p>Ilya Gruzhevski &copy; <span id="year"></span> All rights reserved</p>
                 <div class="main-note">
